aTunes 3.2.0
------------
- New custom Substance theme (aTunes New)
- Play list actions moved to play list menu
- Play list and device actions moved to device menu
- Added keyboard shortcuts for play list actions
- New actions to move to next and previous playlist

aTunes 3.1.1
------------
- FIX: Seek not working after changing look and feel

aTunes 3.1.0
------------
- Store metadata even with files without internal tags (wav for example)
- Added new option to show a filter in navigation table
- Added option to hide navigation tree and use only table
- Memory optimization when reading play lists
- Option to store ratings in tags (by default will use custom metadata store)
- Save podcast information immediately after add/remove/update podcasts
- Ask before removing objects from play list when not exist
- Option to ignore when repository does not exist
- Added preference to disable Last.fm cache
- Use NIO to download podcasts faster
- Store covers in special folder when repository is not writable
- Added option to stop playback after current track
- Show favorite songs and current song in artist top tracks
- Improvements in seek function
- User can provide an email when reporting an error
- New options to save play list selection
- New option to load new play list replacing current one or creating a new one
- FIX: LyricsDirectoryEngine review when no lyric found
- FIX: Mute not working while fade away
- FIX: Duplicate favorites in navigation view when a song is favorite and its artist or album too
- Plugins finally discontinued

aTunes 3.0.9
------------
- FIX: Combo box selection fails with OS X and System Look And Feel
- FIX: Save playlist sets its name as file name by default

aTunes 3.0.8
------------
- FIX: Control visible context panels
- FIX: Improvements in process to delete files
- FIX: Workaround for mplayer problem with long filenames or including non-english chars
- Added support for OS X full screen

aTunes 3.0.7
------------