@@ -9,6 +9,7 @@ aTunes 3.2.0
 aTunes 3.1.1
 ------------
 - FIX: Seek not working after changing look and feel
+- FIX: Repository actions disabled after connecting device
 
 aTunes 3.1.0
 ------------
